css/site.css
/* ... */
.link-ui #link-ui-close {
    color:#fff;
    float:right;
    cursor:pointer;
}

.link-ui.active {
    top:42px;
}

.pad1 {
    padding:10px;
}

.link-ui small {
    font-size:10px;
    color:#aaa;
}

.link-ui a {
    font-size:11px;
}

.right .CodeMirror {
    height:100%;
    background:#363636;
    font-family: 'Droid Sans Mono', sans-serif;
    line-height:1.5em;
}

.right .pane {
    position:absolute;
    top:0;
    width:100%;
    display:none;
}

.right .pane.active {
    display:block;
    right:0;
}

.sub-pane {
    display:none;
    position:absolute;
}

.sub-pane.active {
    display:block;
    left: 0px;
    right: 0;
    top: 41px;
    bottom: 0;
    overflow: auto;
    background: #000;
    z-index: 999;
}

/* PROPERTIES -------------------------------------- */
.mini-map {
    height:150px;
}

.property-table table {
    border-collapse: collapse;
    border-spacing:0;
    border: none;
    width:100%;
    margin-top: 5px;
}

.property-table table input {
    font:inherit;
    width:100%;
    font-family: 'Droid Sans Mono', sans-serif;
    box-sizing:border-box;
    background:#000000;
    border:0;
    border-bottom:1px solid #363636;
    color:#eee;
    margin: 0px 5px 0px 0px;
}

.property-table .remove {
    margin: 0px 5px 5px 0px;
}

.property-table .separator {
    color: #eee;
    padding-right: 3px;
}

.property-table tr {
    padding: 0;
}

.property-table td {
    padding: 0;
    margin: 0;
    vertical-align: top;
}

.sub-pane button {
    background:#363636;
    color:#eee;
    font:inherit;
    border:0;
    transition:all 200ms ease-in-out;
}

.sub-pane button:hover {
    color:#fff;
    background:#333;
}

.sub-pane button.addrow {
    width:100%;
    margin: 0;
}

#buttons {
    background:#363636;
}

.top button {
    cursor:pointer;
    background:#363636;
    margin:0;
    border:0;
    color:#888;
    font-size:14px;
    border-right:1px solid #272822;
    border-bottom:1px solid #272822;
    padding:12px 15px;
    font-weight:normal;
    font-size:12px;
    transition:all 200ms ease-in-out;
}

.top button span.icon {
    font-size:16px;
    margin-right:5px;
    vertical-align:middle;
    color:#eee;
}

.top button:hover,
.top button.active,
.top button.zeroclipboard-is-hover {
    background:#000;
    color:#fff;
}

.top button.done {
    background:#15A;
}

#status {
    font-size:16px;
    color:#BDEEBD;
    position:absolute;
    top:10px;
    right:10px;
    transition:all 200ms;
    display:block;
    -webkit-transition:all 200ms;
}

#status:hover:before {
    content:attr(message);
    font-size:10px;
    color:#eee;
}

#status.icon-circle-blank {
    color:#EDBBD5;
}

.marker-properties {
    border-collapse:collapse;
    font-size:11px;
    border:1px solid #eee;
    margin:0;
}
/* ... */

